# fw_prompt_suite

./: LICENSE  README.md  pyproject.toml
assets/: prompt_director.json
nodes/: __init__.py  any_nodes.py  base.py  float_nodes.py  latent_nodes.py  prompt_director.py  scene_nodes.py
web/: any_nodes.js  float_nodes.js  fw_shared.js  latent_nodes.js  prompt_director.js  scene_nodes.js
